--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
-  "version":2,
-  "builds":[
+  "version": 2,
+  "builds": [
     {
-      "src":"*.js",
-      "use":"@vercel/node"
+      "src": "index.js",
+      "use": "@vercel/node"
     }
   ],
-  "routes":[
+  "rewrites": [
     {
-      "src":"/(.*)",
-      "dest":"/"
+      "source": "/(.*)",
+      "destination": "index.js"
     }
   ]
 }
